--- a/index.html
+++ b/index.html
@@ -5,26 +5,16 @@
 <meta name="viewport" content="width=device-width , initial scale=1">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-
 <body>
-  
 <h1>Our Menu</h1>
 <div id="bg1">
-<p id="p1">Chicken</p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do euismod tempor incididuntut labore et dolore magna aliqua. Ut
-enim ad minim veniam, quis nostrud exercitation
-ullamco laboris nisi ut aliquip ex ea commodo consequat.
+<p id="p1">Chicken</p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do euismod tempor incididuntut labore et dolore magna aliqua. Utenim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 </div>
 <div id="bg2">
-<p id="p2">Beef</p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do euismod tempor incididunt
-ut labore et dolore magna aliqua. Ut
-enim ad minim veniam, quis nostrud exercitation
-ullamco laboris nisi ut aliquip ex ea commodo
-consequat.</div> 
+<p id="p2">Beef</p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do euismod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+</div> 
 <div id="bg3">
-<p id="p3">Sushi</p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do euismod tempor incididunt
-ut labore et dolore magna aliqua. Ut
-enim ad minim veniam, quis nostrud exercitation
-ullamco laboris nisi ut aliquip ex ea commodo
-consequat.</div>
+<p id="p3">Sushi</p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do euismod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+</div>
 </body>
 </html>
